Fixed broken Discord link and added twitter and discord icons on mobile menu

--- a/website/macos-big-sur-icons/src/components/app.less
+++ b/website/macos-big-sur-icons/src/components/app.less
@@ -609,6 +609,8 @@ main{
 }
 
 .card-img-wrapper img{
+    max-width: 150px;
+    width: 100%;
     margin: auto;
 }
 
